more text alignment fixes

--- a/src/components/Truncated/styles.module.scss
+++ b/src/components/Truncated/styles.module.scss
@@ -34,6 +34,9 @@
 			order: 3;
 
 			flex-grow: 1;
+
+			direction: rtl;
+			text-align: left;
 		}
 	}
 }
